feat: 添加连接流程调试工具，优化连接状态检查和参数验证

--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "prepare": "npm run build",
     "watch": "tsc --watch",
     "inspector": "npx @modelcontextprotocol/inspector build/index.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\" \"tests/**/*.ts\"",
+    "typecheck": "tsc --noEmit",
     "test": "vitest --run tests/protocol/ tests/tools/ tests/utils/",
     "test:watch": "vitest tests/protocol/ tests/tools/ tests/utils/",
     "test:coverage": "vitest --coverage tests/protocol/ tests/tools/ tests/utils/",
@@ -52,9 +57,15 @@
     "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@types/node": "^20.11.24",
     "@vitest/coverage-v8": "^1.6.0",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.3.3",
+    "typescript-eslint": "^8.46.4",
     "vitest": "^1.6.0"
   }
 }
