feat: 添加工具类别支持，优化工具定义和配置

--- a/package.json
+++ b/package.json
@@ -29,13 +29,22 @@
     "weixin-devtools-mcp": "build/server.js"
   },
   "files": [
-    "build"
+    "build",
+    "README.md",
+    "LICENSE"
   ],
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
-    "build": "tsc && node -e \"require('fs').chmodSync('build/index.js', '755'); require('fs').chmodSync('build/server.js', '755')\"",
+    "build": "tsc && node scripts/set-executable.mjs",
     "prepare": "npm run build",
+    "prepublishOnly": "npm run typecheck && npm test",
     "watch": "tsc --watch",
-    "inspector": "npx @modelcontextprotocol/inspector build/index.js",
+    "inspector": "npx @modelcontextprotocol/inspector build/server.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
